--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         <![endif]-->
 
         <section class="wrapper">
+            <header>Hi, my name's Erin</header>
+            <main>I'm a Graphic Designer who loves to help people express their vision. In my spare time, I've been pursuing UX-design as a way to further both my education and, hopefully, my career.</main>
             <div class="div-1">
-                I was born and raised in NYC, but my real roots reach to South America. I owe my travel bug to being a frist generation American with family all over the world - we were always on the go!
+                <p>I was <span>born and raised in New Jersey,</span> but my family is from Ireland, Scotland, Germany, and Armenia. I've always wanted to visit all of these places - and I will one day!</p>
             </div>
             <div class="div-2">
-                My passion: I LOVE music - it's one of themost powerful and diverse methods of expression & communication. In the meantime, I get my fix by going to lots & lots of concerts. I'm at 160 and counting!
+                <p><span>My passion:</span> I love to consistently improve in all various aspects of my life: education, phsyical ability, skills, etc. Whether it's video games, lifting, knowledge, etc. I love the process of learning and growing.</p>
             </div>
             <div class="div-3">
-                A fun fact: As a true New Yorker, I'm slightly embarrassed to say that I only learned how to ride a plain ol' stationary bike 1 year ago, and have yet to learn to drive. But, the real takeaway is that I'm learning!
+                <p><span>A fun fact:</span> I had never broken a bone until I was 22 - I broke a bone in my feet slipping down wet stairs at my friends beach house. </p>
             </div>
         </section>
 
